--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "zecwallet",
-  "productName": "Zecwallet FullNode",
-  "version": "0.9.0-beta1",
-  "description": "Zecwallet FullNode (Electron version)",
+  "productName": "Zecwallet Lite",
+  "version": "1.1.0-beta1",
+  "description": "Zecwallet Lite (Electron version)",
   "scripts": {
     "build": "yarn neon && concurrently \"yarn build-main\" \"yarn build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
@@ -58,8 +58,8 @@
     ]
   },
   "build": {
-    "productName": "Zecwallet FullNode",
-    "appId": "co.zecwallet.fullnode",
+    "productName": "Zecwallet Lite",
+    "appId": "co.zecwallet.lite",
     "files": [
       "dist/",
       "node_modules/",
