Clean up dependencies

--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
     "test-all": "yarn lint && yarn flow && yarn build && yarn test && yarn build-e2e && yarn test-e2e",
-    "test-e2e": "node -r @babel/register ./internals/scripts/CheckBuildsExist.js && cross-env NODE_ENV=test testcafe electron:./app ./test/e2e/HomePage.e2e.js",
-    "test-e2e-live": "node -r @babel/register ./internals/scripts/CheckBuildsExist.js && cross-env NODE_ENV=test testcafe --live electron:./app ./test/e2e/HomePage.e2e.js",
     "test-watch": "yarn test --watch"
   },
   "lint-staged": {
@@ -192,7 +190,7 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chalk": "^3.0.0",
-    "concurrently": "^5.0.1",
+    "concurrently": "^5.1.0",
     "cross-env": "^6.0.3",
     "cross-spawn": "^7.0.1",
     "css-loader": "^3.3.2",
@@ -233,7 +231,7 @@
     "neon": "^2.0.0",
     "neon-cli": "^0.3.3",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "opencollective-postinstall": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.19.1",
@@ -248,11 +246,8 @@
     "stylelint-config-prettier": "^8.0.0",
     "stylelint-config-standard": "^19.0.0",
     "terser-webpack-plugin": "^2.3.0",
-    "testcafe": "^1.6.1",
-    "testcafe-browser-provider-electron": "^0.0.13",
-    "testcafe-react-selectors": "^3.3.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
@@ -263,7 +258,6 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@hot-loader/react-dom": "^16.11.0",
     "axios": "^0.19.0",
-    "connected-react-router": "^6.6.1",
     "core-js": "^3.5.0",
     "dateformat": "^3.0.3",
     "devtron": "^1.4.0",
@@ -273,23 +267,18 @@
     "electron-updater": "^4.2.0",
     "hex-string": "^1.0.3",
     "history": "^4.10.1",
-    "ini": "^1.3.5",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-modal": "^3.11.1",
-    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
     "react-tabs": "^3.1.0",
     "react-textarea-autosize": "^7.1.2",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.16",
-    "underscore": "^1.9.2"
+    "source-map-support": "^0.5.16"
   },
   "devEngines": {
     "node": ">=7.x",
