--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "build": {
     "productName": "Zecwallet Lite",
     "appId": "co.zecwallet.lite",
+    "afterAllArtifactBuild": "./afterSignHook.js",
     "files": [
       "dist/",
       "node_modules/",
@@ -221,6 +222,7 @@
     "electron-build-env": "^0.2.0",
     "electron-builder": "^22.2.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-notarize": "^0.2.1",
     "electron-rebuild": "^1.8.8",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
