--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
         "libappindicator1",
         "libxtst6",
         "libnss3"
-      ]
+      ],
+      "artifactName": "Zecwallet_Fullnode_${version}_${arch}.deb"
     },
     "linux": {
       "category": "Development",
