Upload with version

--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -39,4 +39,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: ${{ matrix.os }}
-          path: release
+          path: release/zecwallet-{{ env.VERSION }}.tar.gz
