--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -1,6 +1,9 @@
 name: Electron CD
 
-on: [push]
+on:
+  push:
+    branches:
+      - release
 
 jobs:
   build:
@@ -8,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-16.04]
+        os: [ubuntu-16.04, macOS-latest, windows-latest]
 
     steps:
       - name: Context
@@ -33,9 +36,22 @@ jobs:
         if: contains(matrix.os, 'ubuntu')
         run: |
           yarn package-linux
-      - name: Version
+      - name: Build and Package@Mac
+        if: contains(matrix.os, 'macos')
+        run: |
+          yarn package-mac
+      - name: Build and Package@Win
+        if: contains(matrix.os, 'windows')
+        run: |
+          yarn package-win
+      - name: Version@Linux@Mac
+        if: contains(matrix.os, 'ubuntu') || contains(matrix.os, 'macos')
         run: |
           ./bin/printversion.sh
+      - name: Version@Win
+        if: contains(matrix.os, 'windows')
+        run: |
+          ./bin/printversion.ps1
       - name: Upload artifacts-deb
         uses: actions/upload-artifact@v1
         if: contains(matrix.os, 'ubuntu')
@@ -48,3 +64,21 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: release/Zecwallet Lite-${{ env.VERSION }}.AppImage
+      - name: Upload artifacts-dmg
+        uses: actions/upload-artifact@v1
+        if: contains(matrix.os, 'macos')
+        with:
+          name: ${{ matrix.os }}
+          path: release/Zecwallet Lite-${{ env.VERSION }}.dmg
+      - name: Upload artifacts-zip
+        uses: actions/upload-artifact@v1
+        if: contains(matrix.os, 'windows')
+        with:
+          name: ${{ matrix.os }}
+          path: release/Zecwallet Lite-${{ env.VERSION }}-win.zip
+      - name: Upload artifacts-msi
+        uses: actions/upload-artifact@v1
+        if: contains(matrix.os, 'windows')
+        with:
+          name: ${{ matrix.os }}
+          path: release/Zecwallet Lite ${{ env.VERSION }}.msi
