Implement Companion App

--- a/package.json
+++ b/package.json
@@ -31,10 +31,7 @@
     "prestart": "yarn build",
     "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
     "start-main-dev": "cross-env START_HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js --remote-debugging-port=9223",
-    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
-    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
-    "test-all": "yarn lint && yarn flow && yarn build && yarn test && yarn build-e2e && yarn test-e2e",
-    "test-watch": "yarn test --watch"
+    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -275,7 +272,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
-    "yarn": "^1.21.1"
+    "yarn": "^1.22.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
@@ -286,9 +283,11 @@
     "devtron": "^1.4.0",
     "electron-debug": "^3.0.1",
     "electron-log": "^4.0.0",
-    "electron-store": "^5.1.0",
+    "electron-store": "^5.1.1",
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
+    "js-sha256": "^0.9.0",
+    "libsodium-wrappers": "^0.7.6",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
@@ -301,7 +300,8 @@
     "react-tabs": "^3.1.0",
     "react-textarea-autosize": "^7.1.2",
     "source-map-support": "^0.5.16",
-    "typeface-roboto": "^0.0.75"
+    "typeface-roboto": "^0.0.75",
+    "ws": "^7.2.1"
   },
   "devEngines": {
     "node": ">=7.x",
