Fix ws for build

--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,8 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "bufferutil": "commonjs bufferutil",
+    "utf-8-validate": "commonjs utf-8-validate"
+  }
 }
