Fix bufferutil warning

--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,5 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {
-    "bufferutil": "commonjs bufferutil",
-    "utf-8-validate": "commonjs utf-8-validate"
-  }
+  "dependencies": {}
 }
