--- a/package.json
+++ b/package.json
@@ -283,8 +283,7 @@
     "electron-log": "^4.0.0",
     "electron-store": "^5.1.1",
     "history": "^4.10.1",
-    "js-sha256": "^0.9.0",
-    "libsodium-wrappers": "^0.7.6",
+    "libsodium-wrappers-sumo": "^0.7.6",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
